--- a/Predator_prey_model/GSA_predator_prey_model.ipynb
+++ b/Predator_prey_model/GSA_predator_prey_model.ipynb
@@ -5,28 +5,29 @@
    "metadata": {},
    "source": [
     "*This is a Jupyter Notebook. It is an interactive document that contains both rich text elements such as figures, links, equations, etc. and executable code (in this case Python code) contained in cells.\n",
-    "**Instructions:** You can run the notebook document step-by-step (execute one cell a time) by pressing shift + enter or\n",
-    "you can run the whole notebook in a single step by clicking on the menu Cell -> Run All.*\n",
+    "**How to use a Jupyter Notebook**: You can execute the blocks of code one at the time by placing the mouse in the grey box and pressing shift + enter. An asterisk will appear in the brackets at the top left of the box while the code is being exectued (this may take few seconds) and turns into a number when the execution is over. Alternatively, you can run all the code in the Notebook in a single step by clicking on the menu Cell -> Run All.*\n",
     "\n",
-    "# How can we reach the equilibrium in a predator-prey habitat?\n",
-    "In this Notebook we will try to understand the evolution and interactions in a predator-prey habitat and how to reach the equilibrium of the prey and predator populations.For this purpose we will use a predator-prey model and Global Sensitivity Analysis (GSA).\n",
+    "#What are the key controls of a system?\n",
+    "Mathematical models can be used to test hypotheses and increase our understanding of the functioning of the system they represent. For example, models can be used to explore under which conditions a system will reach a particular state, or to anticipate the effects of human interventions on the system. For example, a mathematical model of an ecological system represents the interactions between different species within a certain habitat. The model could be used to explore the conditions under which all the spieces can coexist, or the conditions that would lead to extinction of some; or it could be used to assess the effects of introducing a new species into the habitat, or the effects of removing a certain number of individuals of a spieces - for example through hunting or fishing. \n",
+    "In this Notebook we show how Global Sensitivity Analysis (GSA) can help in this context, in particular to identify the key controls of the system response. The underlying assumption here is obviously that the model is a realistic representation of the system, so that what is learnt about the model behaviour applies to the system behaviour too. \n",
     "\n",
-    "# What is a predator-prey model?\n",
-    "A predator-prey model is a simplified representation of a predator-prey habitat. We consider two species. One species, the prey, is the primary source of food source for the other, the predator. The predator-prey food chain persists over time thanks to a **negative feedback loop**, i.e. when the product of a reaction leads to a decrease in that reaction *(Ref. 1)*. When predators eat preys, they reduce their population but this drop in the predators food source will soon cause the predator population to decline. This will also reduce the predation rate allowing the prey population to increase again. This cycle creates an up and down wavelike pattern that maintain a long-term equilibrium.\n",
+    "## An ecological model example\n",
+    "In this Notebook we will apply GSA to determine the key controls of a ecological system. For the sake of illustration, we will use a very simple model representing a predator-prey dynamics. The model encompasses two species. One species, the prey, is the primary source of food source for the other, the predator. The predator-prey food chain persists over time thanks to a **negative feedback loop** *(Ref. 1)*. When predators eat preys, the prey population drops; this reduces the predators' food source and soon leads to the predator population to also decline. When predators decline, the predation rate reduces; this reduces pressure on the preys and soon lead to the prey population to increase again. This cycle creates a fluctuating pattern in the prey and predator population densities which is the long-term (oscillating) equilibrium of the system.\n",
     "\n",
     "<left><img src=\"util/predator_prey_equil.gif\" width=\"700px\">\n",
     "\n",
-    "Now imagine that in a given natural habitat we would like to introduce a predator species to maintain the population of rabbits stable. For this purpose, we can select the initial number and species of predators as well as the initial number of rabbits. We could do this by trial and error by introducing different predator species and then monitoring the evolution of the populations but this will likely require high amounts of time, money and animal lives. But what if we could we simulate the habitat and its evolution on a computer using mathematical equations? \n",
+    "The predator-prey model we use here *(Ref. 2)* is characterised by five parameters:\n",
     "\n",
-    "A predator-prey model *(Ref. 2)* is a mathematical model (set of equations) describing the interactions that occur in a predator-prey habitat as a function of various parameters. These model parameters describe the characteristics of the habitat ultimately enabling the estimation of the evolution in time of the predator and prey populations. The parameters of our predator-prey model are the following:\n",
-    "\n",
-    "- *Predator initial population*: initial number of predator individuals\n",
-    "- *Predator attack rate*: number of times that a predator sucessfully attacks (resulting in a kill) per week\n",
-    "- *Predator efficiency*: the factor describing the proportion of successful attacks that let create a new predator\n",
-    "- *Predator death rate*: fraction of the predator population that dies per week, for example by increasing or reducing the number of hunting licenses.\n",
+    "- *Predator initial population*: the initial number of predator individuals\n",
+    "- *Predator attack rate*: the number of times (per week) that a predator attack is successful, i.e. results in killing and eating a prey\n",
+    "- *Predator efficiency*: the efficiency at turning food into offspring, expressed as the proportion of successful attacks that lead to creating a new predator \n",
+    "- *Predator death rate*: the fraction of the predator population that dies per week\n",
     "- *Prey initial population*: initial number of prey individuals\n",
     "\n",
-    "We consider that **optimal equilibrium** of the habitat is reached when both the predator and the prey populations are equal to **7000 ± 250 individuals each**.  To evaluate how close we are to this optimal equilibrium we compute the **equilibrium error**. The equilibrium error is the absolute difference between the predator population after 365 days and 7000 plus the absolute difference between the prey population after 365 days. Now, using the predator-prey model and changing the model parameters, let's try to reach the optimal equilibrium, i.e. try to put both lines (predator and prey populations) between the blue dashed lines before the end of the 365 days period. The blue dashed lines represents a population of 7000 ± 250 individuals."
+    "We define as the **optimal habitat equilibrium** of the habitat a situation where both the predator and the prey populations oscillates within the range of **7000 ± 250 individuals each**.\n",
+    "\n",
+        "## Reaching the optimal habitat equilibrium\n",
+        "Now imagine we want to determine a combination of the above 5 parameters that would lead the system to reach the optimal habitat equilibrium within a year. This could be useful for example to inform a sustainable hunting policy. Can you find a combination that put both lines (the predator and prey populations) between the blue dashed lines (7000 ± 250 individuals) before the end of the simulation period?" 
    ]
   },
   {
@@ -63,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that it is difficult to find the combination of parameters that reaches the defined equilibrium by varying one-at-a-time the values of the paraeters.\n",
+    "The interactive plot above also reports a quantitative indicator of the distance from the equilibrium, called **equilibrium error**. This is the defined as the absolute difference of the predator population from 7000 individuals at the end of the simulation, plus the same absolute difference for the prey population. We would like the error to be as close to zero as possible. However, finding a set of parameters that achieve this by varying each of them one-at-a-time is difficult.\n",
     "\n",
     "In order to facilitate the search for an optimal parameter combination we can apply Global Sensitivity Analysis (GSA). In this case, GSA can help to identify what parameters in our model have a relevant influence in the model results and what parameters can be neglected.\n",
     "\n",
