--- a/Flu_model/GSA_flu_model.ipynb
+++ b/Flu_model/GSA_flu_model.ipynb
@@ -13,7 +13,7 @@
     "<left><img src=\"util/flu_image.png\" width=\"400px\">\n",
     "\n",
     "# A flu model example\n",
-    "In this Notebook we will use a flu model, which provides a simple mathematical description of the spread of a flu in a city. The model divides the city population into three \"compartments\":\n",
+    "In this Notebook we will use a flu model, which provides a simple mathematical description of the spread of an infectious deasease, such as flu, within a population. The model divides the population into three \"compartments\":\n",
     "\n",
     "- **Vulnerable**: individuals who are vulnerable but not yet infected with the flu;\n",
     "\n",
@@ -33,12 +33,15 @@
     "\n",
     "- Increase the number of vaccinated individuals at the start of the flu season. Vaccination costs £70 per person.\n",
     "- Implementing social distancing and isolation measures to reduce the daily contact rate. It is estimated that a reduction of 0.1 points of this rate costs £200,000.\n",
-    "- Distribute face masks to reducr the contagion rate. It is estimated that reducing this rate by 0.1 points costs £50,000.\n",
+    "- Distribute face masks to reduce the contagion rate. It is estimated that reducing this rate by 0.1 points costs £50,000.\n",
     "- Research and use more efficient treatments to reduce the recovery time. It is estimated that a reduction of 1 day in recovery time costs £100,000.\n",
-    "- Increase of the number of daily vaccinations during the outbreak, again at £70 per person.\n",
+    "- Increase of the number of daily vaccinations during the flu season, again at £70 per person.\n",
     "\n",
-    "The objective is to keep the sick population below **40%** (40,000 people) at any time, because above this number the healthcare system is overwhelmed. The total available budget to achieve this goal is of **£3,000,000**."
-   ]
+    "The objective is to keep the sick population below **40%** (40,000 people) at any time, because above this number the healthcare system is overwhelmed. The total available budget to achieve this goal is **£3,000,000**.\n",
+    "\n",
+    "# Finding combinations of actions that achieve the desired outputs\n",
+    "Now use the model to determine a combination of actions that maintain the sick population below 40,000 at all time for a total cost within the available budget o £3,000,000. \n",
+    ]
   },
   {
    "cell_type": "code",
