--- a/Flu_model/GSA_flu_model.ipynb
+++ b/Flu_model/GSA_flu_model.ipynb
@@ -40,8 +40,7 @@
     "The objective is to keep the sick population below **40%** (40,000 people) at any time, because above this number the healthcare system is overwhelmed. The total available budget to achieve this goal is **£3,000,000**.\n",
     "\n",
     "# Finding combinations of actions that achieve the desired outputs\n",
-    "Now use the model to determine a combination of actions that maintain the sick population below 40,000 at all time for a total cost within the available budget o £3,000,000. \n",
-    "\n",
+    "Now use the model to determine a combination of actions that maintain the sick population below 40,000 at all time for a total cost within the available budget fo £3,000,000."
     ]
   },
   {
