--- a/Predator_prey_model/GSA_predator_prey_model.ipynb
+++ b/Predator_prey_model/GSA_predator_prey_model.ipynb
@@ -7,7 +7,7 @@
     "*This is a Jupyter Notebook. It is an interactive document that contains both rich text elements such as figures, links, equations, etc. and executable code (in this case Python code) contained in cells.\n",
     "**How to use a Jupyter Notebook**: You can execute the blocks of code one at the time by placing the mouse in the grey box and pressing shift + enter. An asterisk will appear in the brackets at the top left of the box while the code is being exectued (this may take few seconds) and turns into a number when the execution is over. Alternatively, you can run all the code in the Notebook in a single step by clicking on the menu Cell -> Run All.*\n",
     "\n",
-    "#What are the key controls of a system?\n",
+    "# What are the key controls of a system?\n",
     "Mathematical models can be used to test hypotheses and increase our understanding of the functioning of the system they represent. Model simulation can be used to explore under which conditions a system will reach a particular state, or to anticipate the effects of human interventions on the system. For example, a mathematical model of an ecological system represents the interactions between different species within a certain habitat. Such a model could be used to identify the conditions under which all the spieces can coexist, or the conditions that would lead to extinction of a particular species; or it could be used to assess the effects of introducing or removing a certain number of individuals of a spieces - for example through hunting or fishing. The underlying assumption here is that the model is a realistic representation of the system, so that what is learnt about the model behaviour applies to the system behaviour too. \n",
     "In this Notebook we show how Global Sensitivity Analysis (GSA) can help in this context, and in particular how GSA can help identify the key controls of the system response. \n",
     "\n",
@@ -24,10 +24,10 @@
     "- *Predator death rate*: the fraction of the predator population that dies per week\n",
     "- *Prey initial population*: initial number of prey individuals\n",
     "\n",
-    "We define as the **optimal habitat equilibrium** of the habitat a situation where both the predator and the prey populations oscillates within the range of **7000 ± 250 individuals each**.\n",
+    "We define as the **optimal habitat equilibrium** of the habitat a situation where both the predator and the prey populations oscillates within the range of **7000 ± 500 individuals each**.\n",
     "\n",
-        "## Reaching the optimal habitat equilibrium\n",
-        "Now imagine we want to determine a combination of the above 5 parameters that would lead the system to reach the optimal habitat equilibrium within a year. This could be useful for example to inform the sustainable management of the habitat, for instance by introducing new individuals (preys or predators) or allowing a certain number of hunting licenses (which is a way to artificially increase the predator death rate). Can you find a combination that put both lines (the predator and prey populations) between the blue dashed lines (7000 ± 250 individuals) before the end of the simulation period?" 
+    "## Reaching the optimal habitat equilibrium\n",
+    "Now imagine we want to determine a combination of the above 5 parameters that would lead the system to reach the optimal habitat equilibrium within a year. This could be useful for example to inform the sustainable management of the habitat, for instance by introducing new individuals (preys or predators) or allowing a certain number of hunting licenses (which is a way to artificially increase the predator death rate). Can you find a combination that put both lines (the predator and prey populations) between the blue dashed lines (7000 ± 500 individuals) before the end of the simulation period?"
    ]
   },
   {
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46f3011324c04ba39fef66ef271f336a",
+       "model_id": "5f80e07b98df42a795b881ec06ddf583",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,7 +74,7 @@
     "We observe that two of the parameters, *Predator initial population* and *Prey initial population*, are below the threshold, which means they have very little influence in determining whether the optimal equilibrium is reached or not. Therefore we can stop varying these parameters, set them to an arbitrary value and concentrate on the others.\n",
     "Now focusing on the important parameters *Predator attack rate*, *Predator efficiency ratio* and *Predator death rate*, let's look at their interactions. These can be visually assessed on the coloured scatter plots below. Each point in this plot represents a parameter combination (you can read the parameter values on the horizontal and vertical axes), coloured according to the value of the equilibrium deviation associated to that combination.\n",
     "\n",
-    "<left><img src=\"util/mapping_figures.png\" width=\"700px\">\n",
+    "<left><img src=\"util/mapping_figures2.png\" width=\"700px\">\n",
     "    \n",
     "Can you identify a range of values for each influential parameter within which the equilibrium deviation is minimum (blue dots)? Do you see an interaction between the *Predator efficiency ratio* and the *Predator death rate* - i.e. there are joint variations of the two that lead to a particular response? \n",
     "\n",
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e6f14963c394ad9b27abbeb7820b9be",
+       "model_id": "8393c867a47f420aa2a218af009c6ee2",
        "version_major": 2,
        "version_minor": 0
       },
