Updated Flu model after discussion with Francesca

--- a/Flu_model/GSA_flu_model.ipynb
+++ b/Flu_model/GSA_flu_model.ipynb
@@ -10,8 +10,6 @@
     "# Using GSA to enhance model-informed decisions\n",
     "Mathematical models are often used to inform decision-makers dealing with complex management problems. The model is used to predict the consequences of alternative intervention options, hence providing a quantitative assessment of their benefits and costs. In this context, Global Sensitivity Analysis (GSA) can be used to investigate the space of possible options in a more comprehensive and structured way, including a range of options possibly larger than the few ones that decision-makers would test in a traditional 'what-if?' analysis, and also helping to quantify the importance of intervention options relative to other factors that influence the system response but that are not controllable and potentially highly uncertain.\n",
     "\n",
-    "<left><img src=\"util/flu_image.png\" width=\"400px\">\n",
-    "\n",
     "# A flu model example\n",
     "In this Notebook we will use a flu model, which provides a simple mathematical description of the spread of an infectious deasease, such as flu, within a population. The model divides the population into three \"compartments\":\n",
     "\n",
@@ -21,27 +19,29 @@
     "\n",
     "- **Immune**: individuals have immunity to the flu. This includes individuals who either have recovered from the flu or have been vaccinated.\n",
     "\n",
+    "<left><img src=\"util/flu_model_diagram.png\" width=\"500px\">\n",
+    "\n",
     "The model describes the change in the number of individuals in each compartment over time, using five parameters: \n",
     "\n",
     "- **Initial number of vaccinated individuals**: people who are immune at the start of the flu season because they were previously vaccinated.\n",
+    "- **Recovery time**: the average number of days to get fully recovered\n",
     "- **Contact rate per day**: number of times that an infected individual comes into contact with a vulnerable individual in a day\n",
     "- **Contagion ratio**: proportion of contacts that result in infection\n",
-    "- **Recovery time**: the average number of days to get fully recovered\n",
     "- **Vaccination rate**: number of inviduals who are vaccinated per day during the outbreak\n",
     "\n",
-    "Let's imagine the following problem. In a city with a population of 100,000 people, we would like to simulate and compare five possible actions:\n",
+    "Let's imagine the following problem. In a city with a population of 100,000 people, we would like to simulate and compare three possible actions:\n",
     "\n",
-    "- Increase the number of vaccinated individuals at the start of the flu season. Vaccination costs £70 per person.\n",
     "- Implementing social distancing and isolation measures to reduce the daily contact rate. It is estimated that a reduction of 0.1 points of this rate costs £200,000.\n",
     "- Distribute face masks to reduce the contagion rate. It is estimated that reducing this rate by 0.1 points costs £50,000.\n",
-    "- Research and use more efficient treatments to reduce the recovery time. It is estimated that a reduction of 1 day in recovery time costs £100,000.\n",
-    "- Increase of the number of daily vaccinations during the flu season, again at £70 per person.\n",
+    "- Increase of the number of daily vaccinations during the flu season at £70 per person.\n",
+    "\n",
+    "We don't know how many people are already vaccinated at the start of the flu season, but we have estimated that this number should range between 0 and 50,000 people (half of the population). We also don't know how long the recovery time is, but it is estimated that it ranges between 7 and 21 days.\n",
     "\n",
     "The objective is to keep the sick population below **40%** (40,000 people) at any time, because above this number the healthcare system is overwhelmed. The total available budget to achieve this goal is **£3,000,000**.\n",
     "\n",
     "# Finding combinations of actions that achieve the desired outputs\n",
-    "Now use the model to determine a combination of actions that maintain the sick population below 40,000 at all time for a total cost within the available budget fo £3,000,000."
-    ]
+    "Now use the model to determine a **robust** combination of actions that maintain the sick population below 40,000 at all time for a total cost within the available budget of £3,000,000. Here, **robust** means that the combination should maintain the sick population below 40,000 under most of the possible scenarios of **Initial number of vaccinated individuals** and **Recovery time**."
+   ]
   },
   {
    "cell_type": "code",
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77e8fb6911d24c9daee78f515423e793",
+       "model_id": "73c4b67296da4570b4ba54a08c1de93f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,22 +69,25 @@
     "\n",
     "immune_ini,contact_rate,contagion_rate,recovery_time,vaccination_rate,fig1 = flu_interactive()\n",
     "\n",
-    "widgets.VBox([widgets.VBox([immune_ini,contact_rate,contagion_rate,recovery_time,vaccination_rate],\n",
-    "                           layout=dict(border='solid',width = '750px',height = '180px')),fig1])"
+    "widgets.VBox([widgets.VBox([immune_ini,recovery_time],\n",
+    "                           layout=dict(border='solid 1px',width = '750px',height = '80px')),\n",
+    "              widgets.VBox([contact_rate,contagion_rate,vaccination_rate],\n",
+    "                           layout=dict(border='solid 1px', width = '750px',height = '110px')),\n",
+    "              fig1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that it is difficult to find an optimal combination of parameters by varying one-at-a-time the values of the parameters.\n",
+    "We can see that it is difficult to find an optimal and robust combination of parameters by varying one-at-a-time the values of the parameters.\n",
     "\n",
     "In order to facilitate this search we can apply Global Sensitivity Analysis (GSA).\n",
     "\n",
     "## Plot sensitivity indices and identify the most influential parameters\n",
     "By applying GSA *(Ref. 3)* we obtain a sensitivity index for each model parameter that measures the relative influence of the parameter on the equilibrium error. Being the influence lower as the sensitivity index decreases. \n",
     "\n",
-    "First, run the cell below to obtain the sensitivity indices and identify what parameters in our model have a more relevant influence in reducing the peak of the Sick curve and hence, what actions are more effective regardless of their cost."
+    "First, run the cell below to obtain the sensitivity indices and identify what parameters in our model have a more relevant influence in reducing the peak of the Sick curve and hence and what actions are more effective regardless of their cost."
    ]
   },
   {
@@ -104,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c884188cd11c444ba5b49c26aa0b6bd6",
+       "model_id": "1e76419bf91748799203e7a462611926",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe that *Contact rate per day* has the highest sensitivity index, while the *Recovery time* the lowest. Therefore, among the possible actions, reducing the contact rate is potentially the most effective one and reducing the recovery time the least effective.\n",
+    "Among the possible actions, we observe that reducing the *Contact rate per day* has the highest sensitivity index and that reducing the *Cointagion rate* has the lowest. Among all the parameters the *Recovery time* has the lowest sensitivity. Therefore, among the possible actions, reducing the contact rate is potentially the most effective one, the least effective action is reducing the contagion rate  and that the recovery time has the lowest influence on the efficacy of the possible actions.\n",
     "\n",
     "Now run the cell below to obtain the sensitivity indices but this time in terms of cost so you can identify what parameters in our model have more influence in increasing the total cost."
    ]
@@ -140,7 +143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e79c12c650344e8aaf67848439384084",
+       "model_id": "e6a365bce6c24a948f6b72c056405cef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,23 +165,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again we observe that *Contact rate per day* has the highest sensitivity index but this time in terms of costs. The paramters with the lowest sensitivity are *Contagion rate* and *Recovery time*. Therefore, the most costly action may be reducing the contact rate and the least costly actions may be reducing the contagion rate and reducing the recovery time.\n",
+    "Again we observe that *Contact rate per day* has the highest sensitivity index but this time in terms of costs. The paramter with the lowest sensitivity is *Recovery time* and the action with the lowest sensitivity is the *Contagion rate*. Therefore, the most costly action may be reducing the contact rate and the least costly actions may be reducing the contagion rate and reducing the recovery time.\n",
+    "\n",
+    "Among the possible actions, we again observe that reducing the *Contact rate per day* has the highest sensitivity index and that reducing the *Cointagion rate* has the lowest. Also, among all the parameters the *Recovery time* has the lowest sensitivity. Therefore, the most costly action may be reducing the contact rate, the least costly action may be reducing the contagion rate and that the recovery time has the lowest influence on the efficacy of the possible actions.\n",
     "\n",
     "Looking at both figures above, can you identify the most cost-effective parameters and hence, actions to apply?\n",
     "\n",
     "## Let's try to to slow down the spread in a cost-effective way again...\n",
-    "Now taking into account the sensitivity indices calculated above try again to find a **cost-effective combination of actions** that flattens the Sick curve so the **peak is below 40,000 sick individuals** (blue dashed line) with a **cost lower than £3,000,000**. Can you find a **cost-effective combination of only two actions**?"
+    "Now taking into account the sensitivity indices calculated above try again to find a **robust** and **cost-effective combination of actions** that flattens the Sick curve so the **peak is below 40,000 sick individuals** (blue dashed line) with a **cost lower than £3,000,000**. Can you find a **robust** and **cost-effective combination of only two actions**?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e946d01bba574e9da311750ac4be2642",
+       "model_id": "83c8b8ac5a974b5baf0b291dce235776",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,8 +200,11 @@
    "source": [
     "immune_ini,contact_rate,contagion_rate,recovery_time,vaccination_rate,fig4 = flu_interactive()\n",
     "\n",
-    "widgets.VBox([widgets.VBox([immune_ini,contact_rate,contagion_rate,recovery_time,vaccination_rate],\n",
-    "                           layout=dict(border='solid',width = '750px',height = '180px')),fig4])"
+    "widgets.VBox([widgets.VBox([immune_ini,recovery_time],\n",
+    "                           layout=dict(border='solid 1px',width = '750px',height = '80px')),\n",
+    "              widgets.VBox([contact_rate,contagion_rate,vaccination_rate],\n",
+    "                           layout=dict(border='solid 1px', width = '750px',height = '110px')),\n",
+    "              fig4])"
    ]
   },
   {
