--- a/Hydrological_model/GSA_Hydrological_Model.ipynb
+++ b/Hydrological_model/GSA_Hydrological_Model.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "## Finding influential parameters by GSA\n",
     "The search of a good parameters combination would be easier if we could focus on fewer of them, the ones that mostly influence the model predictions. To identify such parameters, we can apply Global Sensitivity Analysis (GSA). Here we use one particular GSA method, PAWN *(Ref. 2)*. It provides a sensitivity index for each model parameter. The index measures the relative influence of that parameter on the calibration error: the lower the index, the smaller the influence. The method also provides a threshold value to identify uninfluential parameters: if the index of a parameter is below the threshold, then the parameter can be considered uninfluential. Now run the cell below to obtain the sensivity indices and the influence threshold (black dotted line).\n",
-    "<left><img src=\"util/screening_figure.png\" width=\"600px\">\n",
+    "<left><img src=\"util/hyd_model_screening_figure.png\" width=\"600px\">\n",
     "Can any of the parameters be neglected?\n",
     "## Estimating the model parameters, again...\n",
     "Now try to calibrate the hydrological model but only focusing on the parameters that, according to GSA, are influential. For your reference, consider that a **calibration error <50 ML** is a good result, and an **error <35 ML** is very good. Can you get a **good** calibration by only **changing the value of 2 parameters**? and a **very good** calibration by only **changing 3 parameters**?"
@@ -112,12 +112,19 @@
    "metadata": {},
    "source": [
     "Another piece of information provided by GSA is about the possible interactions between the model parameters. For example, the coloured scatter plots below are a qualitative tool to analyse such interactions. Each point in the plots corresponds to a possible parameters combination (you can read the parameter values on the horizontal and vertical axes). The color tells us the calibration error of the model when run with that combination of parameters.\n",
-    "<left><img src=\"util/mapping_figure.png\" width=\"600px\">\n",
+    "<left><img src=\"util/hyd_model_mapping_figure.png\" width=\"600px\">\n",
     "### References\n",
     "1. [HyMOD model - Boyle (2003)](https://doi.org/10.1002/9781118665671.ch14)\n",
     "2. [PAWN method - Pianosi and Wagener (2018)](https://doi.org/10.1016/j.envsoft.2018.07.019)\n",
     "3. [Global Sensitivity Analysis . The primer - Saltelli et al. (2008)](http://www.andreasaltelli.eu/file/repository/A_Saltelli_Marco_Ratto_Terry_Andres_Francesca_Campolongo_Jessica_Cariboni_Debora_Gatelli_Michaela_Saisana_Stefano_Tarantola_Global_Sensitivity_Analysis_The_Primer_Wiley_Interscience_2008_.pdf) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
