--- a/Predator_prey_model/GSA_predator_prey_model.ipynb
+++ b/Predator_prey_model/GSA_predator_prey_model.ipynb
@@ -15,7 +15,8 @@
     "For the sake of illustration, we will use a very simple model representing the dynamics going on between two species. One species, the prey, is the primary source of food source for the other, the predator. The predator-prey food chain persists over time thanks to a **negative feedback loop** *(Ref. 1)*. When predators eat preys, the prey population declines; this reduces the predators' food source and soon leads to the predator population to also decline. When predators decline, the predation rate reduces; this reduces pressure on the preys and soon lead to the prey population to increase again. This cycle creates a fluctuating pattern in the prey and predator population densities which is the long-term (oscillating) equilibrium of the system.\n",
     "\n",
     "<left><img src=\"util/predator_prey_equil.gif\" width=\"700px\">\n",
-    "\n",
+    "(Source: [TED-Ed Youtube video \"Feedback loops: How nature gets its rhythms - Anje-Margriet Neutel\"]( https://www.youtube.com/watch?v=inVZoI1AkC8))\n",
+    "    \n",
     "The predator-prey model we use here *(Ref. 2)* is characterised by five parameters:\n",
     "\n",
     "- *Predator initial population*: the initial number of predator individuals\n",
@@ -38,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f80e07b98df42a795b881ec06ddf583",
+       "model_id": "5d072dcf68134057aacbc2e09137e207",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,14 +70,14 @@
     "## Finding the key controls of the system response by GSA\n",
     "The search of the right parameters combination would be easier if we could focus on fewer of them, the ones that mostly control the long-term system response. To identify such parameters, we can apply Global Sensitivity Analysis (GSA). Here we use one particular GSA method, PAWN (Ref. 3). It provides a sensitivity index for each model parameter. The index measures the relative importance of that parameter on the equilibrium deviation: the lower the index, the smaller the influence. The method also provides a threshold value: if the index of a parameter is below the threshold, then the effect of that parameter on the equilibrium deviation is negligible. Now run the cell below to obtain the sensivity indices and the threshold (black dashed line).\n",
     "\n",
-    "<left><img src=\"util/screening_figure.png\" width=\"600px\">\n",
+    "<left><img src=\"util/predator_prey_screening_figure.png\" width=\"600px\">\n",
     "    \n",
     "We observe that two of the parameters, *Predator initial population* and *Prey initial population*, are below the threshold, which means they have very little influence in determining whether the optimal equilibrium is reached or not. Therefore we can stop varying these parameters, set them to an arbitrary value and concentrate on the others.\n",
-    "Now focusing on the important parameters *Predator attack rate*, *Predator efficiency ratio* and *Predator death rate*, let's look at their interactions. These can be visually assessed on the coloured scatter plots below. Each point in this plot represents a parameter combination (you can read the parameter values on the horizontal and vertical axes), coloured according to the value of the equilibrium deviation associated to that combination.\n",
+    "Now focusing on the important parameters *Predator attack rate*, *Predator efficiency ratio* and *Predator death rate*, let's look at their interactions. These can be visually assessed on the coloured scatter plots below. Each point in this plot represents a parameter combination (you can read the parameter values on the horizontal and vertical axes), coloured according to the value of the equilibrium deviation associated to that combination. Blue points represent parameter combinations that reach the **optimal equilibrium**, i.e. the equlibrium deviation is lower than 1000 individuals, and grey points represent combinations that do not reach the **optimal equilibrium**.\n",
     "\n",
-    "<left><img src=\"util/mapping_figures2.png\" width=\"700px\">\n",
+    "<left><img src=\"util/predator_prey_mapping_figures.png\" width=\"700px\">\n",
     "    \n",
-    "Can you identify a range of values for each influential parameter within which the equilibrium deviation is minimum (blue dots)? Do you see an interaction between the *Predator efficiency ratio* and the *Predator death rate* - i.e. there are joint variations of the two that lead to a particular response? \n",
+    "Can you identify a range of values for each influential parameter within which the equilibrium deviation is minimum (blue points)? Do you see an interaction between the *Predator efficiency ratio* and the *Predator death rate* - i.e. there are joint variations of the two that lead to a particular response? \n",
     "\n",
     "## Reaching the optimal habitat equilibrium, again...\n",
     "Now taking into account what we have learnt so far about the key controls of the system response, and about the parameter interactions, can you find a combination that reach the **optimal equilibrium** of the predator and prey populations?"
@@ -90,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8393c867a47f420aa2a218af009c6ee2",
+       "model_id": "0455e80b6de94e5f91c5a128baebb7b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. [Feedback loops: How nature gets its rhythms - Anje-Margriet Neutel](https://www.youtube.com/watch?v=inVZoI1AkC8&t=2s)\n",
+    "1. [Feedback loops: How nature gets its rhythms - Anje-Margriet Neutel](https://ed.ted.com/lessons/feedback-loops-how-nature-gets-its-rhythms-anje-margriet-neutel)\n",
     "2. [Predator-prey model - Hoppensteadt, F. (2006)](http://www.scholarpedia.org/article/Predator-prey_model)\n",
     "3. [PAWN method - Pianosi and Wagener (2018)](https://doi.org/10.1016/j.envsoft.2018.07.019)\n",
     "4. [Global Sensitivity Analysis . The primer - Saltelli et al. (2008)](http://www.andreasaltelli.eu/file/repository/A_Saltelli_Marco_Ratto_Terry_Andres_Francesca_Campolongo_Jessica_Cariboni_Debora_Gatelli_Michaela_Saisana_Stefano_Tarantola_Global_Sensitivity_Analysis_The_Primer_Wiley_Interscience_2008_.pdf) "
